fix: Scrollbars all over the place! (at least on Windows and Linux). (#29)

--- a/src/kc_angular/src/app/components/knowledge-source-components/ks-canvas/knowledge-canvas.component.scss
+++ b/src/kc_angular/src/app/components/knowledge-source-components/ks-canvas/knowledge-canvas.component.scss
@@ -15,8 +15,3 @@
  */
 
 
-kc-project-overview {
-  width: 100%;
-  min-height: 100%;
-  max-height: 100%;
-}
